
* urban-1 (dev)
 - Added: Support for key-based (API) authentication on PDO backend
 - Added: ChangeLog
 - Changed: PDO config to support dynamic DB configuration (optionally)
 - Added: GetAllUsers function to return username/id list (used for GUIs)
 - Added: Magic method __call implementation on ulLogin. ulLogin methods have 
	  priority over ulLoginBackend.
 - Added: Block/Delete Key functions where needed (PDO)
 - Added: Lazy log cleaning (when we authenticate a user) instead of cron job.